--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   shared_preferences: ^2.2.2
   adaptive_theme: ^3.4.1
   get: ^4.6.6
+  path_provider: ^2.1.1
+  sqflite: ^2.3.0
+  provider: ^6.0.5
+  intl: ^0.18.0
+  flutter_local_notifications: ^16.2.0
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
