--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,17 @@ dependencies:
   sqflite: ^2.3.0
   provider: ^6.0.5
   intl: ^0.18.0
+
+  youtube_player_flutter: ^8.1.2
+  flutter_rating_bar: ^4.0.1
+
   flutter_local_notifications: ^16.2.0
   table_calendar: ^3.0.9
+  http: ^1.1.0
+  firebase_core: ^2.24.2
+  firebase_storage: ^11.5.6
+  file_picker: ^6.1.1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
